[ACPI] fix VIA IRQ issue by enabling VIA quirk http://bugzilla.kernel.org/show_bug.cgi?id=3319

Signed-off-by: David Shaohua Li <shaohua.li@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>